# breadwallet-biblepay-core

./: BRAddress.h  BRKey.c  BRMerkleBlock.c  BRPeer.c  BRPeer.h  BRPeerManager.c  BRTransaction.c  BRTransaction.h  BRWallet.c  BRWallet.h  Makefile  README.md  module.modulemap
Java/: BRCoreJni.h  Makefile  Notes  com_bitradiowallet_core_BRCoreAddress.c  com_bitradiowallet_core_BRCoreAddress.h  com_bitradiowallet_core_BRCoreChainParams.c  com_bitradiowallet_core_BRCoreChainParams.h  com_bitradiowallet_core_BRCoreJniReference.c  com_bitradiowallet_core_BRCoreJniReference.h  com_bitradiowallet_core_BRCoreKey.c  com_bitradiowallet_core_BRCoreKey.h  com_bitradiowallet_core_BRCoreMasterPubKey.c  com_bitradiowallet_core_BRCoreMasterPubKey.h  com_bitradiowallet_core_BRCoreMerkleBlock.c  com_bitradiowallet_core_BRCoreMerkleBlock.h  com_bitradiowallet_core_BRCorePaymentProtocol.c  com_bitradiowallet_core_BRCorePeer.c  com_bitradiowallet_core_BRCorePeer.h  com_bitradiowallet_core_BRCorePeerManager.c  com_bitradiowallet_core_BRCorePeerManager.h  com_bitradiowallet_core_BRCoreTransaction.c  com_bitradiowallet_core_BRCoreTransaction.h  com_bitradiowallet_core_BRCoreTransactionInput.c  com_bitradiowallet_core_BRCoreTransactionInput.h  com_bitradiowallet_core_BRCoreTransactionOutput.c  com_bitradiowallet_core_BRCoreTransactionOutput.h  com_bitradiowallet_core_BRCoreWallet.c  com_bitradiowallet_core_BRCoreWallet.h  com_breadwallet_core_BRCorePaymentProtocolACK.h  com_breadwallet_core_BRCorePaymentProtocolInvoiceRequest.h  com_breadwallet_core_BRCorePaymentProtocolPayment.h  com_breadwallet_core_BRCorePaymentProtocolPaymentACK.h  com_breadwallet_core_BRCorePaymentProtocolRequest.h  com_digiwagewallet_core_BRCoreKey.c  com_digiwagewallet_core_BRCoreTransactionInput.c  com_digiwagewallet_core_BRCoreWallet.c  com_digiwagewallet_core_BRCoreWallet.h  com_nyxwallet_core_BRCoreChainParams.h  com_wagerrwallet_core_BRCoreChainParams.c
Java/Core/: CMakeLists.txt
Java/Core/src/androidTest/java/com/swyftwallet/core/: BaseAIT.java
Java/Core/src/androidTest/java/com/swyftwallet/core/bitcoin/: MasterPublicKeyAIT.java  WalletAIT.java
Java/Core/src/androidTest/java/com/swyftwallet/core/ethereum/: AccountAIT.java  ClientAIT.java  TokenAIT.java  WalletAIT.java  WalletManagerAIT.java
Java/Core/src/main/: AndroidManifest.xml
Java/Core/src/main/cpp/jni/: BRCoreJni.h  com_swyftwallet_core_BRCoreAddress.c  com_swyftwallet_core_BRCoreAddress.h  com_swyftwallet_core_BRCoreChainParams.c  com_swyftwallet_core_BRCoreChainParams.h  com_swyftwallet_core_BRCoreJniReference.c  com_swyftwallet_core_BRCoreJniReference.h  com_swyftwallet_core_BRCoreKey.c  com_swyftwallet_core_BRCoreKey.h  com_swyftwallet_core_BRCoreMasterPubKey.c  com_swyftwallet_core_BRCoreMasterPubKey.h  com_swyftwallet_core_BRCoreMerkleBlock.c  com_swyftwallet_core_BRCoreMerkleBlock.h  com_swyftwallet_core_BRCorePaymentProtocol.c  com_swyftwallet_core_BRCorePaymentProtocol.h  com_swyftwallet_core_BRCorePaymentProtocolACK.h  com_swyftwallet_core_BRCorePaymentProtocolDetails.h  com_swyftwallet_core_BRCorePaymentProtocolEncryptedMessage.h  com_swyftwallet_core_BRCorePaymentProtocolInvoiceRequest.h  com_swyftwallet_core_BRCorePaymentProtocolMessage.h  com_swyftwallet_core_BRCorePaymentProtocolPayment.h  com_swyftwallet_core_BRCorePaymentProtocolPaymentACK.h  com_swyftwallet_core_BRCorePaymentProtocolRequest.h  com_swyftwallet_core_BRCorePeer.c  com_swyftwallet_core_BRCorePeer.h  com_swyftwallet_core_BRCorePeerManager.c  com_swyftwallet_core_BRCorePeerManager.h  com_swyftwallet_core_BRCoreTransaction.c  com_swyftwallet_core_BRCoreTransaction.h  com_swyftwallet_core_BRCoreTransactionInput.c  com_swyftwallet_core_BRCoreTransactionInput.h  com_swyftwallet_core_BRCoreTransactionOutput.c  com_swyftwallet_core_BRCoreTransactionOutput.h  com_swyftwallet_core_BRCoreWallet.c  com_swyftwallet_core_BRCoreWallet.h
Java/Core/src/main/cpp/jni/ethereum/: com_swyftwallet_core_ethereum_BREthereumAccount.h  com_swyftwallet_core_ethereum_BREthereumAmount.h  com_swyftwallet_core_ethereum_BREthereumBlock.h  com_swyftwallet_core_ethereum_BREthereumEWM.c  com_swyftwallet_core_ethereum_BREthereumEWM.h  com_swyftwallet_core_ethereum_BREthereumNetwork.c  com_swyftwallet_core_ethereum_BREthereumNetwork.h  com_swyftwallet_core_ethereum_BREthereumToken.c  com_swyftwallet_core_ethereum_BREthereumToken.h  com_swyftwallet_core_ethereum_BREthereumTransaction.h  com_swyftwallet_core_ethereum_BREthereumTransfer.h  com_swyftwallet_core_ethereum_BREthereumWallet.h
Java/Core/src/main/java/com/swyftwallet/core/: BRCoreAddress.java  BRCoreChainParams.java  BRCoreJniReference.java  BRCoreKey.java  BRCoreMasterPubKey.java  BRCoreMerkleBlock.java  BRCorePaymentProtocolACK.java  BRCorePaymentProtocolEncryptedMessage.java  BRCorePaymentProtocolInvoiceRequest.java  BRCorePaymentProtocolMessage.java  BRCorePaymentProtocolPayment.java  BRCorePaymentProtocolRequest.java  BRCorePeer.java  BRCorePeerManager.java  BRCoreTransaction.java  BRCoreTransactionInput.java  BRCoreTransactionOutput.java  BRCoreWallet.java  BRCoreWalletManager.java
Java/Core/src/main/java/com/swyftwallet/core/ethereum/: BREthereumAccount.java  BREthereumAmount.java  BREthereumBlock.java  BREthereumEWM.java  BREthereumNetwork.java  BREthereumToken.java  BREthereumTransfer.java  BREthereumWallet.java
Java/CoreDemo/: build.gradle
Swift/BRCore.xcodeproj/: project.pbxproj
Swift/BRCrypto/: BRBitcoin.swift  BRCrypto.swift  BRDefaultClients.swift
Swift/BRCryptoTests/: BRCryptoBaseTests.swift
bitcoin/: BRChainParams.c  BRMerkleBlock.c  BRPeer.c  BRPeer.h  BRPeerManager.c  BRTransaction.c  BRWallet.c
coin/: BRCoinParams.h
ethereum/bcs/: BREthereumBCS.c  BREthereumBCS.h
ethereum/blockchain/: BREthereumBlock.c  BREthereumNetwork.c  BREthereumTransaction.c  BREthereumTransaction.h
ethereum/contract/: BREthereumToken.c  BREthereumToken.h
ethereum/event/: BREvent.c  BREvent.h  BREventAlarm.c  BREventQueue.c  BREventQueue.h
ethereum/ewm/: BREthereumClient.h
ethereum/les/: BREthereumLES.c  (+1 more)
support/: BRAddress.h  BRKey.c
(+42 files in other folders)
